--- a/CogLog.UI/Views/Home/Index.cshtml
+++ b/CogLog.UI/Views/Home/Index.cshtml
@@ -17,7 +17,10 @@
       
         <div class="brain-block @(@item.Variant == BrainBlockVariantEnum._2 ? "thought-block" : @item.Variant == BrainBlockVariantEnum._1 ? "question-block" : "")">
             <div class="brain-block-title-container">
-                <h3>@Html.DisplayFor(modelItem => item.Title)</h3>
+                <h3>
+                    @Html.DisplayFor(modelItem => item.Topic!.Logo)
+                    @Html.DisplayFor(modelItem => item.Title)
+                </h3>
                 @if (User.IsInRole("Administrator"))
                 {
                     <div>➚</div>
