begin UI project renaming and refactor

--- a/CogLog.UI/Views/Home/Create.cshtml
+++ b/CogLog.UI/Views/Home/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@using CogLog.UI.Services.Base
-@model CreateBrainBlockVm
+@model CogLog.UI.Models.Block.CreateBlockVm
 
 @{
     ViewData["Title"] = "New Brain Block";
