--- a/CogLog.UI/Views/Home/Index.cshtml
+++ b/CogLog.UI/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using CogLog.UI.Services.Base
-@model IEnumerable<BrainBlockVm>
+@model IEnumerable<CogLog.UI.Models.Block.BlockVm>
 
 @{
     ViewData["Title"] = "Cog Log";
