--- a/CogLog.UI/Views/Topic/Index.cshtml
+++ b/CogLog.UI/Views/Topic/Index.cshtml
@@ -11,8 +11,8 @@
     @foreach (var item in Model)
     {
         <p>
-            @Html.DisplayFor(modelItem => item.Logo)
-            @Html.DisplayFor(modelItem => item.Title)
+            @Html.DisplayFor(modelItem => item.Icon)
+            @Html.DisplayFor(modelItem => item.Label)
         </p>
     }
 </div>
