--- a/CogLog.UI/Views/Home/Create.cshtml
+++ b/CogLog.UI/Views/Home/Create.cshtml
@@ -22,22 +22,14 @@
                 <span asp-validation-for="Content" class="validation-text"></span>
             </div>
             <div class="input-group">
-                <label asp-for="AdditionalContext" class="input-label">Additional Context</label>
-                <textarea asp-for="AdditionalContext" class="input"></textarea>
-                <span asp-validation-for="AdditionalContext" class="validation-text"></span>
+                <label asp-for="ExtraContent" class="input-label">Additional Context</label>
+                <textarea asp-for="ExtraContent" class="input"></textarea>
+                <span asp-validation-for="ExtraContent" class="validation-text"></span>
             </div>
             <div class="input-group">
                 <label asp-for="Url" class="input-label"></label>
                 <input asp-for="Url" class="input" type="url" />
                 <span asp-validation-for="Url" class="validation-text"></span>
-            </div>
-            <div class="input-group">
-                <select name="Variant" class="input">
-                    <option selected value="">Learning</option>
-                    <option value="1">Thought</option>
-                    <option value="2">Question</option>
-                </select>
-
             </div>
         
             <div class="btn-group">
