add play view to experiment with block data and ui

--- a/CogLog.UI/Views/Blocks/Create.cshtml
+++ b/CogLog.UI/Views/Blocks/Create.cshtml
@@ -8,6 +8,7 @@
 </header>
 
 <form asp-controller="Blocks" asp-action="Create">
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div class="input-group">
         <label asp-for="Title" class="input-label"></label>
         <input asp-for="Title" class="input" />
@@ -63,7 +64,7 @@
 
         <div class="form-group">
             <label asp-for="SelectedTopicIds" class="control-label">Topics (Optional)</label>
-            <select asp-for="SelectedTopicIds" id="topic-ids-select" class="form-control" multiple>
+            <select name="SelectedTopicIds" id="topic-ids-select" class="form-control" multiple>
                 @if (Model.Topics != null)
                 {
                     @foreach (var topic in Model.Topics)
@@ -78,7 +79,7 @@
 
         <div class="form-group">
             <label asp-for="SelectedTagIds" class="control-label">Tags (Optional)</label>
-            <select asp-for="SelectedTagIds" id="tag-ids-select" class="form-control" multiple>
+            <select name="SelectedTagIds" id="tag-ids-select" class="form-control" multiple>
                 @if (Model.Tags != null)
                 {
                     @foreach (var tag in Model.Tags)
@@ -104,17 +105,16 @@
         $(document).ready(function() {
             // Handle category selection change
             $('#category-select').change(function() {
-                console.log('Cat OC Called')
                 var categoryId = $(this).val();
-
+    
                 if (categoryId) {
                     // Show author dropdown and load authors for the selected category
                     $('#subject-group').show();
-
+    
                     // Clear current options
                     $('#subject-select').empty().append('<option value="">-- Select Subject --</option>');
-
-                    
+    
+    
                     $.getJSON('@Url.Action("GetSubjectsByCategory", "Blocks")?categoryId=' + categoryId, function(subjects) {
                         $.each(subjects, function(index, subject) {
                             $('#subject-select').append($('<option></option>')
@@ -122,37 +122,38 @@
                                 .text(subject.text));
                         });
                     });
-
-                    $('#topic-tag-group').hide();
-                    $('#topic-ids-select').empty()
-                    $('#tag-ids-select').empty()
+    
+                    //$('#topic-tag-group').hide();
+                    //$('#topic-ids-select').empty()
+                    //$('#tag-ids-select').empty()
                 } else {
                     // Hide author dropdown if no category is selected
                     $('#subject-group').hide();
                     $('#subject-select').val('');
-                    $('#topic-tag-group').hide();
-                    $('#topic-ids-select').empty()
-                    $('#tag-ids-select').empty()
+                    //$('#topic-tag-group').hide();
+                    //$('#topic-ids-select').empty()
+                    //$('#tag-ids-select').empty()
                 }
             });
-
+    
             // Trigger change event if a category is already selected (e.g., on form validation failure)
-            if ($('#category-select').val()) {
-                $('#category-select').trigger('change');
-            }
-
+            //if ($('#category-select').val()) {
+              //  $('#category-select').trigger('change');
+            //}
+    
             // Handle subject selection change
             $('#subject-select').change(function() {
+                console.log('SOC CALLED')
                 var subjectId = $(this).val();
-
+    
                 if (subjectId) {
                     // Show tag dropdown and load tags for the selected author
                     $('#topic-tag-group').show();
-
+    
                     // Clear current options
                     $('#topic-ids-select').empty()
                     $('#tag-ids-select').empty()
-
+    
                     // Load tags via AJAX
                     $.getJSON('@Url.Action("GetTopicsBySubject", "Blocks")?subjectId=' + subjectId, function(topics) {
                         $.each(topics, function(index, topic) {
@@ -161,12 +162,21 @@
                                 .text(topic.text));
                         });
 
-                        // Reselect any previously selected tags
-                        const selectedTopics = @Html.Raw(Json.Serialize(Model.SelectedTagIds));
-                        $('#topic-ids-select').val(selectedTopics);
+                        
+    
+                        // Reselect any previously selected topics
+    
+                    });
+
+                    $.getJSON('@Url.Action("GetTagsBySubject", "Tags")?subjectId=' + subjectId, function(tags) {
+                        $.each(tags, function (index, tag) {
+                            $('#tag-ids-select').append($('<option></option>')
+                                .attr('value', tag.value)
+                                .text(tag.text));
+                        });
                     });
                 } else {
-                    // Hide tag dropdown if no author is selected
+                    // Hide tag dropdown if no subject is selected
                     $('#topic-tag-group').hide();
                     $('#topic-ids-select').empty()
                     $('#tag-ids-select').empty()
