--- a/CogLog.UI/Views/Categories/CreateSubject.cshtml
+++ b/CogLog.UI/Views/Categories/CreateSubject.cshtml
@@ -1,4 +1,4 @@
-@model CogLog.UI.Models.Subject.CreateSubjectVm
+@model CogLog.UI.Models.Subject.SubjectCreateVm
 @{
     ViewData["Title"] = "Create Subject";
 }
