--- a/CogLog.UI/Views/Categories/Edit.cshtml
+++ b/CogLog.UI/Views/Categories/Edit.cshtml
@@ -26,7 +26,7 @@
     <div class="btn-group">
         <input type="submit" value="Save" class="btn btn-success" />
        
-        <a asp-action="Index">Back</a>
+        <a asp-action="Details" asp-route-id="@Model.Id">Back</a>
     </div>
 </form>
 
