--- a/CogLog.UI/Views/Categories/Index.cshtml
+++ b/CogLog.UI/Views/Categories/Index.cshtml
@@ -7,7 +7,7 @@
     <h1>Categories</h1>
 </header>
 
-
+<svg-icon name="settings" />
 
 <ul class="hierarchy-list">
     @foreach (var item in Model)
