--- a/CogLog.UI/Views/Shared/_Layout.cshtml
+++ b/CogLog.UI/Views/Shared/_Layout.cshtml
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="~/css/hierarchy.css" asp-append-version="true"/>
 </head>
 <body>
+<div style="display: none;">
+    @await Component.InvokeAsync("SvgIcon")
+</div>
 
 <div class="content-container">
    
