--- a/CogLog.UI/Views/_ViewImports.cshtml
+++ b/CogLog.UI/Views/_ViewImports.cshtml
@@ -10,3 +10,4 @@
 @using CogLog.UI.Models.Tag
 @using CogLog.UI.Models.Topic
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper CogLog.UI.TagHelpers.SvgIconTagHelper, CogLog.UI
