--- a/CogLog.UI/Views/Blocks/_BlockListItem.cshtml
+++ b/CogLog.UI/Views/Blocks/_BlockListItem.cshtml
@@ -4,10 +4,13 @@
     <div class="card-header">
         <div class="title-container">
 
-            @await Component.InvokeAsync("BlockClassificationCircle", new
-            {
-                categoryName = @Model.Category?.Name,
-            })
+            <div class="circle-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M12 2L2 7l10 5 10-5-10-5z"></path>
+                    <path d="M2 17l10 5 10-5"></path>
+                    <path d="M2 12l10 5 10-5"></path>
+                </svg>
+            </div>
 
             <h2 class="card-title">@Model.Title</h2>
         </div>
