--- a/CogLog.UI/Views/Shared/Components/SubjectSelector/Default.cshtml
+++ b/CogLog.UI/Views/Shared/Components/SubjectSelector/Default.cshtml
@@ -2,7 +2,7 @@
 
 <div class="form-group" id="subject-form-group">
     <label asp-for="SubjectId" class="form-label">Subject</label>
-    <select id="subject-select" name="SubjectId" class="form-control" required>
+    <select id="subject-select" name="SubjectId" class="form-control">
         <option value="">-- Select Subject --</option>
         @foreach (var subject in Model.SubjectSelectItems)
         {
