--- a/CogLog.UI/Views/Blocks/Index.cshtml
+++ b/CogLog.UI/Views/Blocks/Index.cshtml
@@ -7,7 +7,6 @@
 
 <header>
     <h1>Blocks</h1>
-    <a asp-action="Create">Create</a>
 </header>
 
 
@@ -19,3 +18,5 @@
     }
     
 </div>
+
+@await Component.InvokeAsync("FloatingActionButton", new {actionName = "Create"})
