--- a/CogLog.UI/Views/Categories/Details.cshtml
+++ b/CogLog.UI/Views/Categories/Details.cshtml
@@ -5,7 +5,7 @@
 }
     
 <header>
-    <h1>@Model.Name</h1>
+    <h1>@Model.CapitalizedName</h1>
     @if (!string.IsNullOrWhiteSpace(Model.Description))
     {
         <p>@Model.Description</p>
@@ -16,7 +16,7 @@
 
 <div class="section-header">
     <h2>Subjects</h2>
-    <a asp-controller="Subjects" asp-action="Create" asp-route-categoryId="@Model.Id">+</a>
+    @* <a asp-controller="Subjects" asp-action="Create" asp-route-categoryId="@Model.Id">+</a> *@
 </div>
 
 <ul class="hierarchy-list">
@@ -30,15 +30,5 @@
     }
 </ul>
 
-<form asp-action="Delete">
-    <input type="hidden" asp-for="Id" />
-    <input type="submit" value="Delete" class="btn btn-danger" />
-</form>
 
-<button class="fab">
-    <a asp-action="Edit" asp-route-id="@Model.Id">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="var(--purple-50)" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <path d="M17 3a2.828 2.828 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5L17 3z"></path>
-        </svg>
-    </a>
-</button>
+@await Component.InvokeAsync("FloatingActionButton", new {actionName = "Edit", routeId = Model.Id})
