--- a/CogLog.UI/Views/Categories/Index.cshtml
+++ b/CogLog.UI/Views/Categories/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<BaseCategoryVm>    
+@model IEnumerable<CategoryMinimalVm>    
 @{
     ViewData["Title"] = "Categories";
 }
@@ -6,8 +6,6 @@
 <header>
     <h1>Categories</h1>
 </header>
-
-<svg-icon name="settings" />
 
 <ul class="hierarchy-list">
     @foreach (var item in Model)
@@ -20,14 +18,6 @@
     }
 </ul>
 
-<button class="fab">
-    <a asp-action="Create">
-        <svg width="30" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
-            <path
-                fill-rule="evenodd"
-                clip-rule="evenodd"
-                d="M8.75 2.75a.75.75 0 0 0-1.5 0v4.5h-4.5a.75.75 0 0 0 0 1.5h4.5v4.5a.75.75 0 0 0 1.5 0v-4.5h4.5a.75.75 0 0 0 0-1.5h-4.5v-4.5Z"
-                fill="var(--purple-50)"/>
-        </svg>
-    </a>
-</button>
+@await Component.InvokeAsync("FloatingActionButton", new {actionName = "Create"})
+
+
