--- a/CogLog.UI/Views/Subjects/Details.cshtml
+++ b/CogLog.UI/Views/Subjects/Details.cshtml
@@ -4,33 +4,39 @@
 }
 
 <header>
-    <h1>@Model.Name Subject Details</h1>
-    <h3>in @Model.Category.Name category</h3>
+    <h1>@Model.CapitalizedName</h1>
 </header>
 
-<a asp-action="Edit" asp-route-id="@Model.Id">
-    Edit
-</a>
+<div class="section-header">
+    <h2>Topics</h2>
+</div>
 
-<form asp-action="Delete">
-    <input type="hidden" asp-for="Id" />
-    <input type="submit" value="Delete" class="btn btn-danger" />
-</form>
 
-<div>
+<ul class="hierarchy-list">
     @foreach (var item in Model.Topics)
     {
-        <p>
-            @Html.DisplayFor(modelItem => item.Name)
-        </p>
+        <li class="hierarchy-item">
+            <a class="hierarchy-link" asp-controller="Topics" asp-action="Details" asp-route-id="@item.Id">
+                @item.Name
+            </a>
+        </li>
     }
+</ul>
+
+<div class="section-header">
+    <h2>Tags</h2>
 </div>
 
-<div>
+
+<ul class="hierarchy-list">
     @foreach (var item in Model.Tags)
     {
-        <p>
-            @Html.DisplayFor(modelItem => item.Name)
-        </p>
+        <li class="hierarchy-item">
+            <a class="hierarchy-link" asp-controller="Tags" asp-action="Details" asp-route-id="@item.Id">
+                @item.Name
+            </a>
+        </li>
     }
-</div>
+</ul>
+
+@await Component.InvokeAsync("FloatingActionButton", new {actionName = "Edit", routeId = Model.Id})
