--- a/CogLog.UI/Views/Subjects/Edit.cshtml
+++ b/CogLog.UI/Views/Subjects/Edit.cshtml
@@ -23,6 +23,11 @@
     </form>
 </div>
 
+<form asp-action="Delete" class="delete-form">
+    <input type="hidden" asp-for="Id" />
+    <input type="submit" value="Delete" class="btn btn-danger" />
+</form>
+
 
 @section Scripts {
     @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
