--- a/CogLog.UI/Views/Tags/Edit.cshtml
+++ b/CogLog.UI/Views/Tags/Edit.cshtml
@@ -1,20 +1,26 @@
-@model CategoryEditVm
-
+@model TagEditVm
+@{
+    ViewData["Title"] = "Edit Tag";
+}
 
 <div class="form-wrapper">
-    <h1 class="form-title">Edit Category</h1>
+    <h1 class="form-title">Edit Tag</h1>
 
     <form asp-action="Edit">
         <input type="hidden" asp-for="Id" />
 
         @await Component.InvokeAsync("HierarchyFormGroups", Model)
+        
+        @await Component.InvokeAsync("SubjectSelector", new {subjectId = Model.SubjectId})
 
+        
         <div class="form-button-group">
             <input type="submit" value="Update" class="btn btn-primary" />
             <a asp-action="Details" asp-route-id="@Model.Id" class="btn btn-secondary">Cancel</a>
         </div>
 
     </form>
+    
 </div>
 
 <form asp-action="Delete" class="delete-form">
@@ -22,8 +28,6 @@
     <input type="submit" value="Delete" class="btn btn-danger" />
 </form>
 
-
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
 }
