--- a/CogLog.UI/Views/Topics/Index.cshtml
+++ b/CogLog.UI/Views/Topics/Index.cshtml
@@ -5,7 +5,6 @@
     
 <header>
     <h1>Topics</h1>
-<a asp-action="Create">Create</a>
 </header>
 
 
@@ -20,3 +19,5 @@
         </li>
     }
 </ul>
+
+@await Component.InvokeAsync("FloatingActionButton", new {actionName = "Create"})
