--- a/CogLog.UI/Views/Blocks/_BlockListItem.cshtml
+++ b/CogLog.UI/Views/Blocks/_BlockListItem.cshtml
@@ -1,3 +1,5 @@
+@using CogLog.App.Constants
+@using Microsoft.AspNetCore.Mvc.TagHelpers
 @model CogLog.UI.Models.Block.BlockVm
 
 <div class="card">
@@ -6,7 +8,7 @@
 
             <div class="card-title">@Model.Title</div>
         </div>
-        @if (!string.IsNullOrEmpty(@Model.Url))
+        @if (User.IsInRole(Roles.Administrator) && !string.IsNullOrEmpty(@Model.Url))
         {
             <a href="@Model.Url" class="external-link" target="_blank">
                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
@@ -18,32 +20,48 @@
             </a>
         }
     </div>
-    
-    
-        <div class="badge-container" style="display: @(Model.Topics.Count > 0 || Model.Tags.Count > 0 ? "block" : "none");">
 
-            @if (Model.Topics.Count > 0)
+
+    <div class="badge-container" style="display: @(Model.Topics.Count > 0 || Model.Tags.Count > 0 ? "block" : "none");">
+
+        @if (Model.Topics.Count > 0)
+        {
+            @foreach (var item in Model.Topics)
             {
-                @foreach (var item in Model.Topics)
+                @if (User.IsInRole(Roles.Administrator))
                 {
                     <a asp-controller="Topics" asp-action="Details" asp-route-id="@item.Id" class="badge">@item.Name</a>
+
+                }
+                else
+                {
+                    <span class="badge">@item.Name</span>
                 }
             }
+        }
 
-            @if (Model.Tags.Count > 0)
+        @if (Model.Tags.Count > 0)
+        {
+            @foreach (var item in Model.Tags)
             {
-                @foreach (var item in Model.Tags)
+                @if (User.IsInRole(Roles.Administrator))
                 {
                     <a asp-controller="Tags" asp-action="Details" asp-route-id="@item.Id" class="badge">@item.Name</a>
+
+                }
+                else
+                {
+                    <span class="badge">@item.Name</span>
                 }
             }
-        </div>
+        }
+    </div>
 
     <div class="card-content">
         @Model.Content
     </div>
 
-    @if (!string.IsNullOrEmpty(@Model.ExtraContent))
+    @if (User.IsInRole(Roles.Administrator) && !string.IsNullOrEmpty(@Model.ExtraContent))
     {
         <div class="collapsible-container">
             <input type="checkbox" id="collapsible-checkbox">
@@ -61,5 +79,6 @@
             </div>
         </div>
     }
+
 
 </div>
