--- a/CogLog.UI/Views/Shared/Components/BlockFormGroups/Default.cshtml
+++ b/CogLog.UI/Views/Shared/Components/BlockFormGroups/Default.cshtml
@@ -1,9 +1,9 @@
 @model BlockBaseWriteVm
 
-@* <div class="form-group"> *@
-@*     <label asp-for="DateAdded" class="form-label">Date</label> *@
-@*     <input asp-for="DateAdded" class="form-control" type="datetime-local" /> *@
-@* </div> *@
+<div class="form-group">
+    <label asp-for="LearnedAt" class="form-label">Date Learned</label>
+    <input asp-for="LearnedAt" class="form-control" type="datetime-local" value="@DateTime.Now.ToString("yyyy-MM-ddTHH:mm")" />
+</div>
 
 <div class="form-group">
     <label asp-for="Title" class="form-label"></label>
